--- a/src/container/car.hbs
+++ b/src/container/car.hbs
@@ -1,134 +1,182 @@
-<div>
-    <main>
-        <div>
-            <h1>{{make}} {{model}}</h1>
-            <p>Year: {{year}}</p>
-            <p>Color: {{color}}</p>
-        </div>
-        <hr>
-        <h2>Features</h2>
-        {{#with features}}
-        <h3>Interior:</h3>
+<main>
+	<div class="row">
+		<div>
+			<h1 class="text-center">{{make}} {{model}}</h1>
+			<p>Year: {{year}}</p>
+			<p>Color: {{color}}</p>
+		</div>
+		<hr class="my-3">
+		<h2 class="text-center my-4">Features</h2>
 
-        {{#with interior}}
-        <h4>Seats:</h4>
-        <ul>
-            {{#with seats}}
-            <li>Material: {{material}}</li>
-            <li>Color: {{color}}</li>
-            {{#if heated}} <li>Heated: available</li>{{/if}}
-            {{#if ventilated}}<li>Ventilated: available</li>{{/if}}
-            {{/with}}
-        </ul>
-        <h4>Dashboard:</h4>
-        <ul>
-            {{#with dashboard}}
-            <li>Material: {{material}}</li>
-            <li>Color: {{color}}</li>
-            <br>
-            <p>Display:</p>
-            <li>type: {{display.type}}</li>
-            <li>size: {{display.size}}</li>
-            <li>resolution: {{display.resolution}}</li>
-            {{#if display.touchscreen}}<li>Touchscreen: available</li>{{/if}}
-            {{/with}}
-        </ul>
-        <h4>Audio:</h4>
-        <ul>
-            {{#with audio}}
-            <li>System: {{system}}</li>
-            <li>Speakers: {{speakers}}</li>
-            {{#if subwoofer}}<li>Subwoofer: available</li>{{/if}}
-            {{#if bluetooth}}<li>Bluetooth: available</li>{{/if}}
-            {{#if USB}}<li>USB: available</li>{{/if}}
-            {{/with}}
-        </ul>
-        {{/with}}
-        <hr>
-        <h3>Exterior</h3>
-        {{#with exterior}}
-        <p>Wheels:</p>
-        <ul>
-            {{#with wheels}}
-            <li>Size: {{size}}</li>
-            <li>Type: {{type}}</li>
-            <li>Color: {{color}}</li>
-            {{/with}}
-        </ul>
-        <p>Headlights:</p>
-        <ul>
-            {{#with headlights}}
-            <li>Type: {{type}}</li>
-            <li>Brightness: {{brightness}}</li>
-            {{#if automatic}}<li>Automatic: available</li>{{/if}}
-            {{/with}}
-        </ul>
-        <p>Sunroof:</p>
-        <ul>
-            {{#with sunroof}}
-            <li>Type: {{type}}</li>
-            <li>Size: {{size}}</li>
-            {{#if automatic}}<li>Automatic: available</li>{{/if}}
-            {{/with}}
-        </ul>
-        {{/with}}
-        <hr>
+		{{#with features}}
 
-        <h3>Safety</h3>
-        {{#with safety}}
-        <ul>
-            {{#each airbags}}
-            <li>{{@key}}: {{this}}</li>
-            {{/each}}
-        </ul>
+		<div class="row">
+			<div class="col-7">
+				<div class="card">
+					<div class="card-header text-center">
+						<h3>Interior</h3>
+					</div>
+					<div class="card-body">
+						<div class="row">
 
-        <h3>Assistance</h3>
-        <ul>
-            {{#each assistance}}
-            {{#if @key}} <li>{{@key}}: Available</li>{{/if}}
-            {{/each}}
-        </ul>
-        {{/with}}
-        <hr>
+							{{#with interior}}
+							<div class="col-5">
+								<h4 class="text-center">Seats:</h4>
+								<ul>
+									{{#with seats}}
+									<li>Material: {{material}}</li>
+									<li>Color: {{color}}</li>
+									{{#if heated}} <li>Heated: available</li>{{/if}}
+									{{#if ventilated}}<li>Ventilated: available</li>{{/if}}
+									{{/with}}
+								</ul>
+								<h4 class="mt-5 text-center">Dashboard:</h4>
+								<ul>
+									{{#with dashboard}}
+									<li>Material: {{material}}</li>
+									<li>Color: {{color}}</li>
+							</div>
 
-        {{/with}}
-        <h3>Engine: </h3>
-        {{#with engine}}
-        <ul>
-            <li>Type: {{type}}</li>
-            <li>Displacement: {{displacement}}</li>
-            <li>Horsepower: {{horsepower}}</li>
-            <li>Torgue: {{torgue}}</li>
-            <br />
-            <p>Transmission: </p>
-            {{#each transmission}}
-            <li>{{@key}}: {{this}}</li>
-            {{/each}}
-        </ul>
-        {{/with}}
-        <hr>
-        <h4>Fuel economy:</h4>
-        <ul>
-            {{#each fuel_economy}}
-            <li>{{@key}}: {{this}}</li>
-            {{/each}}
-        </ul>
-        <hr>
-        <h3>Price: </h3>
-        {{#with price}}
-        <ul>
-            <li>Base: {{base}}</li>
-            <li>Destination: {{destination}}</li>
-            <br>
-            <p>Options: </p>
-            {{#each options}}
-            <li>{{@key}}: {{this}}</li>
-            {{/each}}
-            <hr>
-            <p><strong>Total: </strong>{{total}}
-            <p>
-        </ul>
-        {{/with}}
+							<div class="col-6">
+								<p class="h4 text-center">Display:</p>
+								<li>type: {{display.type}}</li>
+								<li>size: {{display.size}}</li>
+								<li>resolution: {{display.resolution}}</li>
+								{{#if display.touchscreen}}<li>Touchscreen: available</li>{{/if}}
+								{{/with}}
+								</ul>
+								<h4 class="mt-5 text-center">Audio:</h4>
+								<ul>
+									{{#with audio}}
+									<li>System: {{system}}</li>
+									<li>Speakers: {{speakers}}</li>
+									{{#if subwoofer}}<li>Subwoofer: available</li>{{/if}}
+									{{#if bluetooth}}<li>Bluetooth: available</li>{{/if}}
+									{{#if USB}}<li>USB: available</li>{{/if}}
+									{{/with}}
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			{{/with}}
 
-    </main>
-</div>
+			<div class="col-5">
+				<div class="card">
+					<div class="card-header text-center">
+						<h3>Exterior</h3>
+					</div>
+
+					{{#with exterior}}
+					<p class="h5 text-center mb-2 mt-2">Wheels:</p>
+					<ul>
+						{{#with wheels}}
+						<li>Size: {{size}}</li>
+						<li>Type: {{type}}</li>
+						<li>Color: {{color}}</li>
+						{{/with}}
+					</ul>
+					<p class="h5 text-center mb-2 mt-2">Headlights:</p>
+					<ul>
+						{{#with headlights}}
+						<li>Type: {{type}}</li>
+						<li>Brightness: {{brightness}}</li>
+						{{#if automatic}}<li>Automatic: available</li>{{/if}}
+						{{/with}}
+					</ul>
+					<p class="h5 text-center mb-2 mt-2">Sunroof:</p>
+					<ul>
+						{{#with sunroof}}
+						<li>Type: {{type}}</li>
+						<li>Size: {{size}}</li>
+						{{#if automatic}}<li>Automatic: available</li>{{/if}}
+						{{/with}}
+					</ul>
+					{{/with}}
+				</div>
+			</div>
+		</div>
+
+		<hr class="my-5">
+
+		<div class="col-6">
+			<h3 class="ms-3">Safety</h3>
+			{{#with safety}}
+			<ul>
+				{{#each airbags}}
+				<li>{{@key}}: {{this}}</li>
+				{{/each}}
+			</ul>
+		</div>
+
+		<div class="col-6">
+			<h3 class="ms-5">Assistance</h3>
+			<ul>
+				{{#each assistance}}
+				{{#if @key}} <li>{{@key}}Available</li>{{/if}}
+				{{/each}}
+			</ul>
+			{{/with}}
+		</div>
+
+		<hr class="my-5">
+
+		{{/with}}
+		<div class="row">
+			<h3 class="mb-3">Engine: </h3>
+			<div class="col-4">
+				{{#with engine}}
+				<ul class="list-group">
+					<li class="list-group-item text-muted">Type...................................<b>{{type}}</b></li>
+					<li class="list-group-item text-muted">Displacement..............................<b>{{displacement}}</b></li>
+					<li class="list-group-item text-muted">Horsepower................................<b>{{horsepower}}</b></li>
+					<li class="list-group-item text-muted">Torgue........................................<b>{{torque}}</b></li>
+
+
+					<p class="h3 my-3">Transmission: </p>
+					{{#each transmission}}
+					<li class="list-group-item">{{@key}}: {{this}}</li>
+					{{/each}}
+				</ul>
+			</div>
+			{{/with}}
+
+			<div class="col-5 mb-5 ms-5">
+				<h4 class="ms-5 mb-3">Fuel economy:</h4>
+				<ul class="list-group">
+					{{#each fuel_economy}}
+					<li class="list-group-item">{{@key}}: {{this}}</li>
+					{{/each}}
+				</ul>
+			</div>
+
+		</div>
+
+
+		<hr class="my-5">
+
+		<div class="card text-bg-primary">
+			<div class="card-header">
+				<h3 class="text-center my-4">Price: </h3>
+			</div>
+			<div class="card-body">
+				{{#with price}}
+				<ul>
+					<li>Base: {{base}}</li>
+					<li>Destination: {{destination}}</li>
+					<br>
+					<p>Options: </p>
+					{{#each options}}
+					<li>{{@key}}: {{this}}</li>
+					{{/each}}
+					<hr>
+					<p class="h4"><strong>Total: </strong>{{total}}
+					<p>
+				</ul>
+				{{/with}}
+			</div>
+		</div>
+
+	</div>
+</main>
