--- a/src/container/program.hbs
+++ b/src/container/program.hbs
@@ -1,80 +1,94 @@
-<div>
-  <section>
-    <main>
-      {{#with program}}
-      <h1>Excursion:</h1>
-      <div>
-        {{#with excursion}}
-        <p>Name: {{name}}</p>
-        <p>Location: {{location.city}}, {{location.country}}</p>
-        <p>Date: {{date}}</p>
-        <hr>
-        <div>
-          <hr />
-          {{#each program}}
-          <h2>Program: {{name}}</h2>
+<main>
+  <div class="row">
+    {{#with program}}
+    <h1 class="text-center">Excursion:</h1>
+    <div>
+      {{#with excursion}}
+      <p>Name: {{name}}</p>
+      <p>Location: {{location.city}}, {{location.country}}</p>
+      <p>Date: {{date}}</p>
+    </div>
+    <hr>
 
-          <p>Type: {{type}}
-            <br />
-            Duration: {{duration}}
-          </p>
 
-          <div>
-            {{#with details}}
-            <p><b>Address: </b>{{museum.name}}</p>
+    <hr>
+    <div class="card">
+      <div class="card-body">
+        {{#each program}}
+        <h2 class="mt-2 mb-4 text-center">Program: {{name}}</h2>
+
+        <p>Type: {{type}};
+
+          {{duration}} hours
+        </p>
+
+
+        {{#with details}}
+        <div><b>Address: </b>{{museum.name}}</div>
+
+
+        {{#if museum}}
+        {{#with museum}}
+
+        <div>{{location.address}}, {{location.city}}, {{location.country}}</div>
+
+        <div class="card mt-4">
+          <div class="card-header">
+            <p class="mt-3 text-center"><strong>Exhibits:</strong></p>
+          </div>
+          <div class="card-body">
 
             <ul>
-              {{#if museum}}
-              {{#with museum}}
-
-              <li>{{location.address}}, {{location.city}}, {{location.country}}</li>
-              <p><strong>Exhibits:</strong></p>
-              <ul>
-                {{#each exhibits}}
-                <li>Artist: {{#if artist}}{{artist}}{{else}}Unknown{{/if}}</li>
-                <p>{{description}}</p>
-                {{#if audio_guide}}
-                <p><em>Audio guide: Available</em></p>
-                {{/if}}
-                {{/each}}
-              </ul>
-              {{/with}}
+              {{#each exhibits}}
+              <li>Artist: {{#if artist}}{{artist}}{{else}}Unknown{{/if}}</li>
+              <p class="mt-2">{{description}}</p>
+              {{#if audio_guide}}
+              <p class="text-end"><em>Audio guide: Available</em></p>
               {{/if}}
+              {{/each}}
             </ul>
+          </div>
+        </div>
+        {{/with}}
+        {{/if}}
 
 
+        <div>
+
+          {{#if venue}}
+          {{#with venue}}
+
+          <div>{{location.address}}, {{location.city}}, {{location.country}}</div>
+          {{/with}}
+
+          <div class="card col-7 mt-4 ms-5">
+            <div class="card-header mb-2"><strong>Performers: </strong></div>
             <ul>
-              {{#if venue}}
-              {{#with venue}}
-
-              <li>{{location.address}}, {{location.city}}, {{location.country}}</li>
-              {{/with}}
-
-              <p><strong>Performers: </strong></p>
-
               {{#each performers}}
               <li>{{name}}, {{type}}</li>
               {{/each}}
 
               {{/if}}
             </ul>
-
-            {{#with guide}}
-            <p><b>Guide: </b>{{name}}</p>
-            <p>Language: {{language}}</p>
-            <p>Rating: {{rating}}</p>
-            {{/with}}
-            <hr />
-            {{/with}}
           </div>
-
-          {{/each}}
-
         </div>
 
+        <div class="text-end">
+          {{#with guide}}
+          <p><b>Guide: </b>{{name}}</p>
+          <p>Language: {{language}}</p>
+          <p>Rating: {{rating}}</p>
+          {{/with}}
+        </div>
+        <hr class="my-3">
         {{/with}}
+
+
+        {{/each}}
+
       </div>
-      {{/with}}
-    </main>
-  </section>
-</div>
+    </div>
+    {{/with}}
+    {{/with}}
+  </div>
+</main>
