--- a/src/container/summary.hbs
+++ b/src/container/summary.hbs
@@ -1,36 +1,27 @@
-{{!--
-Це код container файлу для summary сторінки,
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
---}}
+<main>
+	<div class="row">
+		{{#with main}}
+		<section class="mb-5">
+			<div class="text-center">
+				{{>title data=summary.title}}
+			</div>
 
-<div>
-    {{#with main}}
-    <main>
-        <section class="mb-5">
-            {{>title data=summary.title}}
-            <div>
-                <p>
-                    {{summary.text}}
-                </p>
-            </div>
-        </section>
-        {{#with experience}}
-        <section>
-            <div>
-                {{> title data=title}}
-            </div>
-            <div>
-                <p>
-                    {{text}}
-                </p>
-            </div>
-        </section>
-        {{/with}}
-    </main>
-    {{/with}}
-</div>
+			<div class="text-center">{{summary.text}}</div>
 
-{{!--
-Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
-Адже наш layout/default.hbs має вже структуру HTML
---}}
+		</section>
+
+		<section>
+			{{#with experience}}
+			<div class="text-center">
+				{{> title data=title}}
+			</div>
+			<div>
+				<p>
+					{{text}}
+				</p>
+			</div>
+			{{/with}}
+		</section>
+		{{/with}}
+	</div>
+</main>
