--- a/src/component/attribute.hbs
+++ b/src/component/attribute.hbs
@@ -1,14 +1,11 @@
-<div>
-    <p><b>Attribute:</b></p>
+<p class="mt-3"><b>Attribute:</b></p>
 
-    <ul>
-        {{#each attributes}}
+<ul>
+    {{#each attributes}}
 
-        <li>{{name}}</li>
-        <dfn>{{description}}</dfn>
+    <li>{{name}}</li>
+    <dfn>{{description}}</dfn>
 
-        {{/each}}
+    {{/each}}
 
-    </ul>
-
-</div>
+</ul>
