--- a/src/container/person.hbs
+++ b/src/container/person.hbs
@@ -1,150 +1,142 @@
-<div>
-  {{#with person}}
-  <main>
-    <section>
-      <div>
-        <h1>{{name}}</h1>
-        <p>Age: {{age}} </p>
-        <p>Gender: {{gender}} </p>
-        <div>
-          <address>
-            {{#with address}}
-            <p>Address: {{street}} {{city}} {{state}} {{zip}} {{country}}</p>
-            {{/with}}
-          </address>
-          <hr>
-          <div>
-            <h2>Education</h2>
-            <ul>
-              {{#each education}}
+<main>
+  <div class="row">
+    {{#with person}}
+    <div>
+      <h1 class="text-center">{{name}}</h1>
+      <p>Age: {{age}} </p>
+      <p>Gender: {{gender}} </p>
 
-              <li>Degree: {{degree}}</li>
-              <li>Major: {{major}}</li>
-              <li>University: {{university}}</li>
-              <li>Graduation Year: {{graduationYear}}</li>
+      <address>
+        {{#with address}}
+        <p>Address: {{street}} {{city}} {{state}} {{zip}} {{country}}</p>
+        {{/with}}
+      </address>
+    </div>
 
-              {{/each}}
-            </ul>
-          </div>
-
-          <br>
-          <hr>
-
-          <div>
-            <h2>Work experience</h2>
-            {{#each workExperience}}
-
-            <p><b>Company:</b>{{company}}</p>
-            <p>{{title}}</p>
-
-            <div>
-              <p>From {{startDate}} to {{endDate}}</p>
-            </div>
-
-            <b><em>Responsibilities:</em></b>
-            <ul>
-              {{#each responsibilities}}
-
-              <li>{{this}}</li>
-
-              {{/each}}
-            </ul>
-
-            <div>
-              <p>{{industry}}, {{year_founded}}</p>
-            </div>
-
-            <div>
-              <strong>Employees:</strong>
-
-              <ul>
-                {{#each employees}}
-                <li>{{name}}</li>
-
-                <p>{{position}}, {{department}}</p>
-                <div>
-                  <em><b>Projects: </b></em>
-                  <br>
-                  <br>
-
-
-                  <ul>
-                    {{#each projects}}
-                    <li>{{name}}</li>
-                    <li>{{description}}</li>
-                    <li>{{status}}</li>
-
-                </div>
-
-                <br>
-
-                <div>
-                  <em><b>Teams: </b></em>
-
-                  <br>
-
-                  <div>
-
-                    <ul>
-                      {{#each teams}}
-                      <p><b>{{team_name}}</b></p>
-
-                      {{#with team_leader}}
-                      <li>{{name}}, {{title}}</li>
-                      <p>{{> link text=email blank=true noLine=true}}</p>
-
-                      {{/with}}
-
-
-                      <div>
-                        <ul>
-                          {{#each team_members}}
-
-                          <li>{{name}}, {{title}}</li>
-                          <p>{{> link text=email blank=true noLine=true}}</p>
-                          <p>Skills: {{skills}}</p>
-
-                          <div>
-                            <p>Projects:</p>
-
-                            <ul>
-                              {{#each projects}}
-                              <li>Name: {{name}}</li>
-                              <li>Description: {{description}}</li>
-                              <li>Technologies: {{technologies}}</li>
-
-                              <p>Team members: </p>
-                              <ul>
-                                {{#each team_members}}
-                                <li>{{name}}, {{title}}</li>
-                                {{/each}}
-                                {{/each}}
-                              </ul>
-                          </div>
-
-                          {{/each}}
-                        </ul>
-                      </div>
-
-                    </ul>
-                    {{/each}}
-              </ul>
-            </div>
-
-          </div>
-        </div>
-        {{/each}}
-        </ul>
-        </ul>
-        {{/each}}
-        {{/each}}
+    <div class="card col-11 ms-5">
+      <div class="card-header">
+        <h2>Education</h2>
       </div>
-</div>
-</div>
-</div>
+      <div class="card-body">
+        <ul>
+          {{#each education}}
 
-</div>
-</section>
+          <li>Degree: {{degree}}</li>
+          <li>Major: {{major}}</li>
+          <li>University: {{university}}</li>
+          <li>Graduation Year: {{graduationYear}}</li>
+
+          {{/each}}
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <h2 class="text-center my-4">Work experience</h2>
+      <div class="col-5">
+        {{#each workExperience}}
+        <div><b>Company:</b>{{company}}</div>
+        <p>{{title}}</p>
+        <p>Date from: {{startDate}} to: {{endDate}}</p>
+      </div>
+
+      <div class="col-6">
+        <div class="text-center me-5"><em>Responsibilities:</em></div>
+        <ul>
+          {{#each responsibilities}}
+
+          <li>{{this}}</li>
+
+          {{/each}}
+        </ul>
+        <div class="text-end">{{industry}}, {{year_founded}}</div>
+      </div>
+    </div>
+
+    <hr class="my-3">
+
+    <div>
+      <p class="mb-3"><strong>Employees:</strong></p>
+      <ul>
+        {{#each employees}}
+        <li>{{name}}</li>
+        <p>{{position}}, {{department}}</p>
+      </ul>
+    </div>
+
+    <div class="my-3">
+      <h4>Projects: </b></h4>
+      <ul>
+        {{#each projects}}
+        <li>{{name}}</li>
+        <li>{{description}}</li>
+        <li>{{status}}</li>
+      </ul>
+    </div>
+
+    <hr class="my-4">
+
+    <h3 class=" mb-3">Teams: </h3>
+
+    <div>
+      <ul>
+        {{#each teams}}
+        <h4 class="mt-3 me-5 text-center">{{team_name}}</h4>
+        {{#with team_leader}}
+        <li>{{name}}, {{title}}</li>
+        <p>{{> link text=email blank=true noLine=true}}</p>
+        {{/with}}
+      </ul>
+
+
+      <h5 class="mt-4">Team members</h5>
+      <ul>
+        {{#each team_members}}
+
+        <li>{{name}}, {{title}}</li>
+        <p>{{> link text=email blank=true noLine=true}}</p>
+        <div>Skills: {{skills}}</div>
+      </ul>
+    </div>
+
+
+
+    <div>
+      <h5 class="text-center my-4">Projects:</h5>
+
+
+      {{#each projects}}
+      <p> <strong>{{name}}</strong></p>
+      <dfn>{{description}}</dfn>
+      <div class="my-3">Technologies: {{technologies}}</div>
+
+      <p>Team members: </p>
+      <ul>
+        {{#each team_members}}
+        <li>{{name}}, {{title}}</li>
+        {{/each}}
+        {{/each}}
+      </ul>
+
+    </div>
+    {{/each}}
+
+
+
+    {{/each}}
+
+
+    {{/each}}
+
+
+    {{/each}}
+    {{/each}}
+
+
+
+
+
+
+    {{/with}}
+  </div>
 </main>
-{{/with}}
-</div>
