--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -1,51 +1,54 @@
-{{!--
-Це код container файлу для skills сторінки,
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
---}}
-
-<div>
-  {{#with main}}
-  <main>
+<main>
+  <div class="row">
+    {{#with main}}
     <section>
-      {{>title data="All skills" big=true}}
-      <ul>
-        {{#each skills}}
-        <li>
-          {{name}}
+      <div class="card">
+        <div class="card-body">
+          <div class="text-center my-3">
+            {{>title data="All skills" big=true}}
+          </div>
 
-          {{#if point includeZero=true}} ({{point}}) {{/if}}
-          {{#if isTop}} (TOP) {{/if}}
+          <ul>
+            {{#each skills}}
+            <li>
+              {{name}}
 
-          {{#unless point includeZero=true}} (не вивчаємо) {{/unless}}
+              {{#if point includeZero=true}} ({{point}}) {{/if}}
+              {{#if isTop}} (TOP) {{/if}}
 
-          {{#unless point}}
-          {{#if point includeZero=true}}
-          (зараз вивчаємо)
-          {{/if}}
-          {{/unless}}
-        </li>
-        {{/each}}
-      </ul>
+              {{#unless point includeZero=true}} (не вивчаємо) {{/unless}}
+
+              {{#unless point}}
+              {{#if point includeZero=true}}
+              (зараз вивчаємо)
+              {{/if}}
+              {{/unless}}
+            </li>
+            {{/each}}
+          </ul>
+        </div>
+      </div>
     </section>
 
     <section>
-      {{>title data="My hobbies" }}
-
-      <ol>
-        {{#each hobbies}}
-        <li>
-          {{name}}
-          {{#if isMain}} (favourite) {{/if}}
-        </li>
-        {{/each}}
-      </ol>
+      <div class="card mt-5">
+        <div class="card-body">
+          <div class="text-center">
+            {{>title data="My hobbies" }}
+          </div>
+          <ol>
+            {{#each hobbies}}
+            <li>
+              {{name}}
+              {{#if isMain}} (favourite) {{/if}}
+            </li>
+            {{/each}}
+          </ol>
+        </div>
+      </div>
 
     </section>
-  </main>
-  {{/with}}
-</div>
 
-{{!--
-Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
-Адже наш layout/default.hbs має вже структуру HTML
---}}
+    {{/with}}
+  </div>
+</main>
