--- a/src/container/web.hbs
+++ b/src/container/web.hbs
@@ -1,61 +1,63 @@
-<div>
-  <main>
-    <h1>Web languages</h1>
+<main>
+  <div class="row">
+    <h1 class="text-center">Web languages</h1>
 
     {{#with web}}
     {{#each languages}}
-    <hr>
-    <h2>{{name}} </h2>
+    <hr class="mb-5">
 
+    <div class="card">
+      <div class="card-header">
+        <h2 class="text-center">{{name}} </h2>
+        <p>Version: {{version}}</p>
+        <span><em>{{description}}</em></span>
+      </div>
 
-    <p>Version: {{version}}</p>
-    <span><em>{{description}}</em></span>
+      <div class="card-body">
+        <div>
+          {{#if elements}}
+          <h3 class="my-4">Elements: </h3>
+          <ol>
+            {{#each elements}}
+            <li>{{name}}</li>
+            <dfn>{{description}}</dfn>
+            {{> attribute }}
+            {{/each}}
+          </ol>
+          {{/if}}
+        </div>
 
-    <div>
-      {{#if elements}}
-      <h3>Elements: </h3>
-      <ol>
-        {{#each elements}}
-        <li>{{name}}</li>
-        <dfn>{{description}}</dfn>
+        <div>
+          {{#if properties}}
+          <h3>Properties: </h3>
+          <ol>
+            {{#each properties}}
+            <li>{{name}} - <dfn>{{description}}</dfn></li>
+            {{> values}} <br />
+            {{/each}}
+          </ol>
+          {{/if}}
+        </div>
 
+        <div>
+          {{#if functions}}
+          <h3>Functions:</h3>
+          <ol>
+            {{#each functions}}
+            <li>{{name}}</li>
+            <dfn>{{description}}</dfn>
+            <br />
+            {{> param}}
+            <br />
+            {{/each}}
+          </ol>
+          {{/if}}
 
-        {{> attribute }}
+        </div>
+      </div>
 
-        {{/each}}
-      </ol>
-      {{/if}}
+      {{/each}}
+      {{/with}}
     </div>
-
-    <div>
-      {{#if properties}}
-      <h3>Properties: </h3>
-      <ol>
-        {{#each properties}}
-        <li>{{name}} - <dfn>{{description}}</dfn></li>
-        {{> values}} <br />
-        {{/each}}
-      </ol>
-      {{/if}}
-    </div>
-
-    <div>
-      {{#if functions}}
-      <h3>Functions:</h3>
-      <ol>
-        {{#each functions}}
-        <li>{{name}}</li>
-        <dfn>{{description}}</dfn>
-        <br />
-        {{> param}}
-        <br />
-        {{/each}}
-      </ol>
-      {{/if}}
-
-    </div>
-
-    {{/each}}
-    {{/with}}
-  </main>
-</div>
+  </div>
+</main>
