--- a/src/container/work.hbs
+++ b/src/container/work.hbs
@@ -1,100 +1,67 @@
-{{!--
-Це код container файлу для summary сторінки,
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
---}}
-
-<div>
+<main>
 	{{#with main}}
-	<main>
-		<section>
-			{{>title data="Work history"}}
-			<div>
-				<ul>
-					{{#each works}}
-					<li>
-						<div>{{position}}</div>
 
-						<br>
+	<div class="text-center my-4">
+		{{>title data="Work history"}}
+	</div>
 
-						<div>
-							{{duration.from}} -
-							{{#if duration.to}}
-							{{duration.to}}
-							{{else}}
-							(досі працюємо)
-							{{/if}}
-						</div>
+	<div>
+		{{#each works}}
+		<div><strong>{{position}}</strong></div>
+		{{duration.from}} -
+		{{#if duration.to}}
+		{{duration.to}}
+		{{else}}
+		(досі працюємо)
+		{{/if}}
+	</div>
 
-						<br>
 
-						<div>
-							{{#if company.url}}
-							{{> link text=company.name href=company.url blank=true noLine=true}}
-							{{else}}
-							<b>{{company.name}}</b>
-							{{/if}}
-						</div>
 
-						<br>
-						<br>
+	<div class="my-4">
+		{{#if company.url}}
+		{{> link text=company.name href=company.url blank=true noLine=true}}
+		{{else}}
+		<b>{{company.name}}</b>
+		{{/if}}
+	</div>
 
-						<div>
 
-							<strong>Projects({{projectAmount}})</strong>
+	<h3 class="text-center"><strong>Projects({{projectAmount}})</strong></h3>
 
-						</div>
 
-						<br>
+	{{#each projects}}
 
-						<ul>
-							{{#each projects}}
-							<li>
-								<div>{{> link text=name href=url blank=true noLine=true}}</div>
+	<div>{{> link text=name href=url blank=true noLine=true}}</div>
 
-								<div>
-									<p>{{about}}</p>
-								</div>
+	<div>
+		<p>{{about}}</p>
+	</div>
 
-								<br>
 
-								<div>
-									<em>Project stacks {{stackAmount}}</em>
-									{{#each stack}}
-									<ul>
-										<li>{{name}}</li>
-									</ul>
-									{{/each}}
-								</div>
 
-								<br>
+	<div>
+		<em>Project stacks {{stackAmount}}</em>
+		{{#each stack}}
+		<ul>
+			<li>{{name}}</li>
+		</ul>
+		{{/each}}
+	</div>
 
-								<div>
-									<em>Awards</em>
-									{{#each awards}}
-									<ul>
-										<li>{{name}}</li>
-									</ul>
-									{{/each}}
-								</div>
+	<div>
+		<em>Awards</em>
+		{{#each awards}}
+		<ul>
+			<li>{{name}}</li>
+		</ul>
+		{{/each}}
+	</div>
 
-							</li>
 
-							<br>
-							{{/each}}
+	{{/each}}
 
-						</ul>
-					</li>
-					<br>
-					{{/each}}
-				</ul>
-			</div>
-		</section>
+	{{/each}}
 
-	</main>
 	{{/with}}
-</div>
-
-{{!--
-Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
-Адже наш layout/default.hbs має вже структуру HTML
---}}
+</main>
