--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,17 +1,33 @@
-{{!--
-Це код container файлу для index сторінки,
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
---}}
+<main>
+    <div class="row">
+        <h1 class="mt-5 my-2">Список сторінок</h1>
 
-<div class="p-5">
-    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+        <dfn class="mb-5">Мій перший pet project з використанням Bootstrap та Handlebars</dfn>
 
-    <button type="button" class="btn btn-success">Купити</button>
-</div>
+        <div class="col-2 flex-column">
+            <a href="/bio" class="btn btn-primary px-5">Bio</a>
+            <a href="/car" class="btn btn-primary px-5 my-3">Car</a>
+            <a href="/education" class="btn btn-primary px-5">Education</a>
+            <a href="/facebook" class="btn btn-primary px-5 my-3">Facebook</a>
+            <a href="/mac" class="btn btn-primary px-5">Mac</a>
+            <a href="/js" class="btn btn-primary px-5 my-3">JS</a>
+            <a href="/person" class="btn btn-primary px-5">Person</a>
+            <a href="/program" class="btn btn-primary px-5 my-3">Program</a>
+            <a href="/shopcart" class="btn btn-primary px-5">Shopcart</a>
+            <a href="/shopcatalog" class="btn btn-primary px-5 my-3">Shopcatalog</a>
+            <a href="/shophome" class="btn btn-primary px-5">Shophome</a>
+            <a href="/shoporder" class="btn btn-primary px-5 my-3">Shoporder</a>
+            <a href="/shopprofile" class="btn btn-primary px-5">Shopprofile</a>
+            <a href="/shopreview" class="btn btn-primary px-5 my-3">Shopreview</a>
+            <a href="/skills" class="btn btn-primary px-5 mb-3">Skills</a>
+            <a href="/summary" class="btn btn-primary px-5">Summary</a>
+            <a href="/task21" class="btn btn-primary px-5 my-3">Task21</a>
+            <a href="/task22" class="btn btn-primary px-5">Task22</a>
+            <a href="/task31" class="btn btn-primary px-5 my-3">Task31</a>
+            <a href="/web" class="btn btn-primary px-5">Web</a>
+            <a href="/work" class="btn btn-primary px-5 my-3">Work</a>
+        </div>
 
-{{!--
-Цей код містить лише те, що буде виводитись в
 
-<body>
-    Адже наш layout/default.hbs має вже структуру HTML
-    --}}
+    </div>
+</main>
